[SUREFIRE-1562] Support Java 11